MDEV-32015 insert into an empty table fails with hash unique

don't enable bulk insert when table->s->long_unique_table